--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3348,5 +3348,27 @@ input, select, textarea {
         display: block !important;  /* Cada span en su propia línea */
     }
 }
+/* Desktop */
+@media screen and (min-width: 769px) {
+    #header .inner h3 {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 0 1em; /* Espacio horizontal entre elementos */
+    }
+    
+    #header .inner h3 span {
+        white-space: nowrap;
+    }
+}
+
+/* Mobile */
+@media screen and (max-width: 768px) {
+    #header .inner h3 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
 
 	}
